tests/baselines/reference/globalThisReadonlyProperties.errors.txt
globalThisReadonlyProperties.ts(1,12): error TS2540: Cannot assign to 'globalThis' because it is a read-only property.


==== globalThisReadonlyProperties.ts (1 errors) ====
    globalThis.globalThis = 1 as any // should error
               ~~~~~~~~~~
!!! error TS2540: Cannot assign to 'globalThis' because it is a read-only property.
    var x = 1
    const y = 2
    globalThis.x = 3
    globalThis.y = 4
    